# kantVideoCapture

./: CMakeLists.txt  README.md  kantcap  kantcap.cpp
sources/: compile_kant.sh  install.sh  kantcap  kantcap.cpp  paramExtract.cpp  paramExtract.h  progressBar.cpp  progressBar.h  videoCapture.cpp  videoCapture.h
